crates/service/tests/diagnostics/snapshots/features__diagnostics__start__has_params.snap
---
source: crates/service/tests/diagnostics/start.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 9
        },
        "end": {
          "line": 3,
          "character": 10
        }
      },
      "severity": 1,
      "code": "start",
      "source": "wat",
      "message": "start function must be type of `[] -> []`"
    }
  ]
}
